--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,40 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: 'IBM Plex Sans', sans-serif;
+
 }
 /* Geeft de style van de nav aan */
 nav {
-  background-color: white;
+  background-color: #e19dfa;
   height: 80px;
-  box-shadow: -20px 15px 10px -15px black;
+  box-shadow: 0 15px 10px -15px black;
   z-index: 2;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.winkelkar {
+  position: relative;
+  left: 735px;
+}
+#winkelkar {
+  width: 35px;
+  height: 35px;
+}
+ul{
+  list-style-type: none;
+}
+.nav-knop{
+  display: flex;
+  gap: 15px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .landingpage {
-  background-color: pink;
   height: 100vh;
   z-index: 1;
   position: relative;
